# gorhapsody

./: .gitignore  PROMPT.md  README.md  pyproject.toml
backend/: game_analyzer.py
go_rhapsody/backend/: app.py  exceptions.py  game_analyzer.py  goboard.py  sgf_parser.py
go_rhapsody/game_analyzer/: game_analyzer.py
go_rhapsody/static/css/: style.css
go_rhapsody/static/js/: app.js  music_engine.js
go_rhapsody/templates/: index.html
static/css/: style.css
templates/: index.html
